# headnote

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: index.rst
docs/releases/: backlog.rst
headnote/: __init__.py  cli.py  headnotes.py  horizontals.py  likelihood.py  strategy.py  utils.py
headnote/feature/: __init__.py  common.py  fixed.py  result.py
headnote/strategy/: __init__.py  common.py  fixed.py
tests/: __init__.py  conftest.py  test_common.py  test_fixed.py  test_header.py  test_headnotes.py  test_regression.py  test_rotated.py  test_validate.py
tests/expected/: 100_diss148hc  100_diss166hc  bachelor_bachelor026  bachelor_bachelor037  bachelor_bachelor063  bachelor_bachelor090  bachelor_bachelor111  bachelor_bachelor128  book_book173  diss128hc  diss148  diss171hc  diss_diss144  diss_diss148  diss_diss172  diss_diss264  docu_docu027  hcdiss148  master_master075  master_master110  master_master116  master_master155  master_master193  tech019  tech_tech019  tech_tech024
