[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "headnote"
version = "0.5.1"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "iamraw>=4.91.7,<5.0.0",
    "utilo>=2.109.0,<3.0.0",
    "configos>=1.0.4,<2.0.0",
    "elementae>=1.0.1,<2.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "pagenumber>=1.0.0,<2.0.0",
    "utilotest==1.0.4",
    "hoverpower==1.5.1",
    "gennex==1.0.3",
    "rawmaker>=2.40.5,<3.0.0",
    "pdflog>=1.0.2,<2.0.0",
    "ibidem>=1.0.0,<2.0.0",
    "groupmes>=1.1.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/headnote"
Repository = "https://github.com/anaticulae/headnote"

[project.scripts]
headnote = "headnote.cli:main"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "headnote",
    "headnote.feature",
    "headnote.strategy",
]
exclude = [
    "tests*",
]

[tool.hoverpower]
packages = [
    "BACHELOR",
    "BOOK",
    "DISS",
    "DOCU",
    "MASTER",
    "TECH",
]
